# wmaker

./: .cvsignore  .cvsnotify  .gitignore  AUTHORS  BUGFORM  BUGS  COPYING.OPL  COPYING.WTFPL  ChangeLog  FAQ  FAQ.I18N  FAQ.I18N.cs  FAQ.I18N.sk  INSTALL  INSTALL-WMAKER  INSTALL-WMAKER.cs  INSTALL-WMAKER.es  INSTALL-WMAKER.fr  INSTALL-WMAKER.pt  INSTALL-WMAKER.sk  INSTALL.cs  INSTALL.es  INSTALL.fr  INSTALL.pt  INSTALL.sk  Install  MIRRORS  Makefile.am  Makefile.in  NEWS  README  README.GNOME  README.KDE  README.antialiasing  README.definable-cursor  README.es  README.pt  Sample.XftConfig  TODO  The-perfect-Window-Maker-patch.txt  (+11 more)
WINGs/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  WINGs.h  WINGsP.h  WUtil.h  array.c  bag.c  bagarray.c  baglist.c  bagtree.c  configuration.c  connect.c  connection.c  data.c  dragcommon.c  dragdestination.c  dragsource.c  error.c  findfile.c  fontmanager.c  get-wings-flags.in  get-wutil-flags.in  handlers.c  hashtable.c  host.c  international.c  llist.c  llist.h  memory.c  menuparser.c  menuparser.h  menuparser_macros.c  misc.c  mywidget.c  mywidget.h  (+60 more)
WINGs/Documentation/: Makefile.am  README.connection
WINGs/Examples/: .cvsignore  Makefile.am  README  colorpick.c  connect.c  fontl.c  puzzle.c  server.c
WINGs/Extras/: .cvsignore  Makefile.am  fieldeditor.c  fieldeditor.h  tabledelegates.c  tabledelegates.h  tableview.c  test.c  wtabledelegates.c  wtabledelegates.h  wtableview.c  wtableview.h
WINGs/Resources/: Images.tiff  Images.xcf  Images.xpm  Makefile.in
WINGs/Tests/: .cvsignore  Makefile.am  mywidget.c  testcolorpanel.c  testmywidget.c  testtext.c  wm.html  wmfile.c  wmquery.c  wtest.c
WINGs/WINGs/: Makefile.am  WINGs.h  WINGsP.h  WINGsP.h.in  WUtil.h  proplist-compat.h  wtheme.h
WINGs/po/: .cvsignore  Makefile.am  README  bg.po  ca.po  cs.po  de.po  fr.po  fy.po  hu.po  nl.po  sk.po  sr.po
WINGs/python/: .cvsignore  Makefile  README  WINGs.i  WINGs.py  setup.py  test.py
WPrefs.app/: .cvsignore  Appearance.c  Configurations.c  Docks.c  Expert.c  Focus.c  Font.c  FontSimple.c  HotCornerShortcuts.c  Icons.c  KeyboardSettings.c  KeyboardShortcuts.c  Makefile.am  Makefile.in  Menu.c  MenuGuru.c  MenuPreferences.c  MouseSettings.c  NoMenuAlert.c  Paths.c  Preferences.c  README  Text.c  TextureAndColor.c  TexturePanel.c  TexturePanel.h  TexturePanel.icons  Themes.c  WPrefs.c  WPrefs.desktop.in  WPrefs.h  WPrefs.tiff  WPrefs.xpm  WindowHandling.c  Workspace.c  double.c  double.h  editmenu.c  editmenu.h  font.data  (+4 more)
WPrefs.app/po/: .cvsignore  Makefile.am  Makefile.in  README  bg.po  ca.po  cs.po  de.po  es.po  et.po  fi.po  fr.po  fy.po  hr.po  hu.po  it.po  ja.po  ko.po  nl.po  pt.po  ru.po  sk.po  sr.po  tr.po  uk.po  zh_CN.GB2312.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
WPrefs.app/tiff/: Makefile.am  Makefile.in  README  appearance.tiff  clip.tiff  configs.tiff  dock.tiff  dockclipsection.tiff  ergonomic.tiff  ergowood.tiff  expert.tiff  fonts.tiff  hotcorners.tiff  iconprefs.tiff  keyboardprefs.tiff  keyshortcuts.tiff  menus.tiff  (+19 more)
WindowMaker/: Makefile.am  Makefile.in  README  README.themes  appearance.menu.fy.in  appearance.menu.in  appearance.menu.nl.in  appearance.menu.sr.in  autostart.sh  background.menu  background.menu.fy  background.menu.nl  background.menu.sr  exitscript.sh  menu  menu.bg  menu.bg.in  menu.ca  menu.cn  menu.cz  menu.da  menu.de  menu.dk  menu.el  menu.es  menu.fi  menu.fi.in  menu.fr  menu.fy  menu.fy.in  menu.gl  menu.he  menu.hr  menu.hu  menu.hu.in  menu.in  menu.it  menu.ja  menu.ko  menu.ko.in  (+58 more)
doc/: Makefile.am  Makefile.in  WPrefs.1  WPrefs.1x  get-wings-flags.1  get-wraster-flags.1  get-wutil-flags.1  geticonset.1  geticonset.1x  getstyle.1  getstyle.1x  seticons.1  seticons.1x  setstyle.1  setstyle.1x  upgrade-windowmaker-defaults.8  wcopy.1  wdread.1  wdread.1x  wdwrite.1  wdwrite.1x  wmagnify.1x  wmaker.1x  wmaker.in  wmgenmenu.1  wmiv.1  wmmenugen.1  wmsetbg.1x  wmsetbg.in  wsetfont.1x  wxcopy.1x  wxpaste.1x
plugins/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  WMFun-demo.style  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.in  update-autoconf
po/: Makefile.am  Makefile.in  README  be.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dk.po  el.po  es.po  et.po  fi.po  fr.po  fy.po  gl.po  hr.po  hu.po  hy.po  it.po  ja.po  ja.po.broken  ko.po  ms.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.GB2312.po  zh_CN.po  (+2 more)
src/: .cvsignore  GNUstep.h  I.h  Makefile.am  Makefile.in  WindowMaker.h  actions.c  actions.h  appicon.c  appicon.h  application.c  application.h  appmenu.c  appmenu.h  balloon.c  balloon.h  client.c  client.h  colormap.c  config.h  config.h.in  cycling.c  def_pixmaps.h  defaults.c  defaults.h  dialog.c  dialog.h  dock.c  dock.h  dockedapp.c  event.c  event.h  extend_pixmaps.h  framewin.c  framewin.h  funcs.h  geomview.c  geomview.h  gnome.c  gnome.h  (+94 more)
test/: .cvsignore  Makefile.am  Makefile.in  notest.c  wm_fsm_test.c  wtest.c
util/: .cvsignore  Makefile.am  Makefile.in  README  bughint  convertfonts.c  directjpeg.c  dockit  fontconv.c  geticonset.c  getstyle.c  seticons.c  setstyle.c  wcopy  wdread.c  wdwrite.c  wkdemenu.pl  wm-oldmenu2new  wmagnify.c  wmaker.inst.in  wmchlocale.in  wmgenmenu.c  wmgenmenu.h  wmiv.c  wmmenugen.c  wmmenugen.h  wmmenugen_misc.c  wmmenugen_parse_wmconfig.c  wmmenugen_parse_xdg.c  wmsetbg.c  wmsetup.c  wpaste  wsetfont  wxcopy.c  wxpaste.c  xdnd.c  xdnd.h
wmlib/: .cvsignore  Makefile.am  Makefile.in  WMaker.h  app.c  app.h  command.c  event.c  menu.c  menu.h
wrlib/: .cvsignore  ChangeLog  CmapAlloc.c  CrCmap.c  DelCmap.c  LookupCmap.c  Makefile.am  Makefile.in  NEWS  README  StdCmap.c  TODO  alloca.c  alpha_combine.c  ballot_box.tiff  bench.h  color.c  configure.in  context.c  convert.c  convolve.c  draw.c  flip.c  get-wraster-flags.in  gif.c  gradient.c  imgformat.h  jpeg.c  libwraster.map  load.c  load_gif.c  load_jpeg.c  load_jxl.c  load_magick.c  load_png.c  load_ppm.c  load_tiff.c  load_webp.c  load_xpm.c  load_xpm_normalized.c  (+27 more)
(+400 files in other folders)
