## Process this file with automake to produce Makefile.in

SUBDIRS = wrlib WINGs src util po WindowMaker WPrefs.app doc

EXTRA_DIST = TODO BUGS BUGFORM FAQ FAQ.I18N FAQ.I18N.cs FAQ.I18N.sk \
	INSTALL-WMAKER INSTALL-WMAKER.cs INSTALL-WMAKER.fr INSTALL-WMAKER.es \
	INSTALL-WMAKER.pt INSTALL-WMAKER.sk README.definable-cursor \
	The-perfect-Window-Maker-patch.txt \
	README.es README.pt COPYING.WTFPL autogen.sh

